[package]
name = "dino"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# playdate-rs = "0.0.13"
playdate-rs = { git = "https://github.com/rusty-crank/playdate-rs.git" }
# playdate-rs = { path = "../playdate-rs/playdate-rs" }
spin = "0.9.8"

# See all pdxinfo fields at https://github.com/rusty-crank/playdate-rs#pdxinfo-generation-and-bundling

[package.metadata.pdxinfo]
name = "Dino"
bundle_id = "me.wenyu.playdate.dino"
description = "Dinosaur"
image_path = "launcher"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Remove this if this project is a member of a workspace
[workspace]
